# tedash

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
tedash/: manage.py
tedash/tedash/: asgi.py  settings.py  urls.py  wsgi.py
tedash/tedashcore/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
tedash/tedashcore/importers/: junit.py
tedash/tedashcore/migrations/: 0001_initial.py  0002_report_project.py  0003_alter_report_report.py  0004_project_description.py  0005_alter_project_description.py  0006_alter_report_report.py  0007_report_kind.py
tedash/tedashcore/templates/: base.html  part-testcase-class.html  project-detail.html  projects.html  report-detail.html  upload.html
tedash/tedashcore/templatetags/: junit.py
tedash/tedashcore/tests/: test_junit_importer.py
