[tool.poetry]
name = "tedash"
version = "0.1.0"
description = "Test Dashboard"
authors = ["Miguel Angel Garcia <miguelangel.garcia@gmail.com>"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.5"
psycopg = "^3.1.12"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-django = "^4.5.2"
factory-boy = "^3.3.0"
Faker = "^19.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
